--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-data
-output
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -164,3 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 run.sh
+output
+data/dev/new_languages
+data/dev_masked
+data/test
+data/test_masked
+data/train
